<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.3</version>
		<relativePath />
	</parent>
	<groupId>de.zorro909.blank</groupId>
	<artifactId>blankdiscordbot-parent</artifactId>
	<version>1.1.0</version>
	<packaging>pom</packaging>

	<name>BlankDiscordBot-Parent</name>
	<description>DiscordBot for Blank Humanity</description>

	<properties>
		<java.version>17</java.version>
	</properties>

	<modules>
		<module>blankdiscordbot-core</module>
		<module>discord-library</module>
	</modules>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>net.dv8tion</groupId>
			<artifactId>JDA</artifactId>
			<version>5.0.0-alpha.4</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
	</dependencies>
	
	<profiles>
	 	<profile>
         	   <id>sonar</id>
         	   <properties>
  			<sonar.organization>blankhumanity</sonar.organization>
 			<sonar.host.url>https://sonarcloud.io</sonar.host.url>
        	        <sonar.projectKey>BLANKHumanity_blank-humanity-discord-bot</sonar.projectKey>
        	        <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
        	    </properties>
        	    <activation>
        	        <activeByDefault>false</activeByDefault>
        	    </activation>
        	    <build>
        	        <plugins>
        	            <plugin>
                        	<groupId>org.sonarsource.scanner.maven</groupId>
                        	<artifactId>sonar-maven-plugin</artifactId>
                        	<version>3.9.1.2184</version>
                        	<executions>
                        	    <execution>
                                	<phase>verify</phase>
                                	<goals>
                                	    <goal>sonar</goal>
                                	</goals>
                            	    </execution>
                        	</executions>
                    	    </plugin>
                	</plugins>
            	    </build>
        	</profile>
	</profiles>
</project>
